# codeforces

./: .gitignore  CMakeFlagsCompiler.txt  CMakeLists.txt  NoteForCompilerCLION.md  README.md  snippets_cpp  template.cpp  template.java  template_tourist.cpp
algo/: M-tree.cpp  debug.h
codeforces/: 110A_Nearly_Lucky_Number.cpp  1399A_Remove_Smallest.cpp  1668A_DirectionChange.cpp  1669B_Triple.cpp  1670A_Prof_Slim.cpp  1746A_Maxmina.cpp  1746B_Rebellion.cpp  271A_Beautiful_Year.java  486A_Calculating_Function.cpp  4A_Watermelon.cpp  996A_Hit_the_Lottery.java  A_Boy_or_Girl.cpp  A_Helpful_Maths.cpp  A_Maxmina.cpp  A_Nearly_Lucky_Number.cpp  A_Remove_Smallest.java  A_Restoring_Three_Numbers.java  A_Soldier_and_Bananas.cpp  A_Stones_on_the_Table.cpp  A_Tram.cpp  A_Word_Capitalization.cpp  A_Wrong_Subtraction.cpp  Ajedrez.cpp  NextRound.cpp  PetyaAndString.cpp  TechnicalSupport.cpp
contests/: README.md
data/: debug.h
rpc11_solutions/: output.txt
snippets_cpp/: Template_CLion_JetBrains  cpp.json
snippets_java/: java.json
solutions/: 1296A_Array_with_Odd_Sum.cpp  1306A_Minimal_Square.cpp  1311A_Add_Odd_or_Subtract_Even.cpp  1325A_EhAb_AnD_gCd.cpp  1343B_Balanced_Array.cpp  1348A_Phoenix_and_Balance.cpp  1352A_Sum_of_Round_Numbers.cpp  1353A_Most_Unstable_Array.cpp  1353B_Two_Arrays_And_Swaps.cpp  1360B_Honest_Coach.cpp  1367A_Short_Substrings.cpp  1367B_Even_Array.cpp  1385A_Three_Pairwise_Maximums.cpp  1385B_Restore_the_Permutation_by_Merger.cpp  1409A_Yet_Another_Two_Integers_Problem.cpp  1426A_Floor_Number.cpp  1433A_Boring_Apartments.cpp  1512A_Spy_Detected.cpp  (+82 more)
(+123 files in other folders)
